fixing align buttons in first column table

--- a/src/components/common/Table/Table.module.scss
+++ b/src/components/common/Table/Table.module.scss
@@ -8,7 +8,41 @@
   }
   &__root {
     width: 100%;
-    @include tableStyle;
+    border-collapse: collapse;
+    table-layout: fixed;
+    thead {
+      position: sticky;
+      top: 0;
+      z-index: 1;
+      background-color: $white;
+      box-shadow: inset 0 -1px 0 $border;
+      tr {
+        height: 60px;
+      }
+      th {
+        padding: 5px 15px;
+        &:first-child {
+          width: 60px;
+          text-align: left;
+        }
+      }
+    }
+
+    tbody {
+      tr {
+        height: 60px;
+        @include menuElementHover;
+        transition: all ease 0.1s;
+      }
+      td {
+        font-size: 15px;
+        padding: 5px 15px;;
+        text-align: center;
+        &:first-child {
+          text-align: left;
+        }
+      }
+    }
   }
 }
 
