--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -54,37 +54,3 @@
   height: 1px;
   margin: -1px;
 }
-
-@mixin tableStyle {
-  & {
-    border-collapse: collapse;
-    table-layout: fixed;
-    thead {
-      position: sticky;
-      top: 0;
-      z-index: 1;
-      background-color: $white;
-      box-shadow: inset 0 -1px 0 $border;
-      tr {
-        height: 60px;
-      }
-      th {
-        padding: 5px 15px;
-        // @include tableColumnWidth;
-      }
-    }
-
-    tbody {
-      tr {
-        height: 60px;
-        @include menuElementHover;
-        transition: all ease 0.1s;
-      }
-      td {
-        font-size: 15px;
-        padding: 5px 15px;;
-        text-align: center;
-      }
-    }
-  }
-}
